--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = "mongodb+srv://danbrs1993:Naruto8431@cluster0.k6qjqgv.mongodb.net/"
+MONGO_URI = "mongodb+srv://danbrs1993:Naruto8431@cluster0.k6qjqgv.mongodb.net/"
